erDiagram
    USER ||--o{ RENTAL : makes
    USER ||--o{ TOPUP : initiates
    BOOK ||--o{ RENTAL : "is rented"
    RENTAL ||--o| PAYMENT : "has one (optional if using wallet)"
    TOPUP ||--|| PAYMENT : "generates"
    BOOK ||--o{ BOOK_GENRES : "has many"
    GENRE ||--o{ BOOK_GENRES : "belongs to many"

    USER {
        uint id PK
        string name
        string email UK
        string password "Hashed"
        int balance "Default 0"
        datetime created_at
        datetime updated_at
    }

    GENRE {
        uint id PK
        string name UK
    }

    BOOK {
        uint id PK
        string isbn UK
        string title
        string author
        int daily_rental_fee
        int total_stock
        int available_stock
        datetime created_at
        datetime updated_at
    }

    BOOK_GENRES {
        uint book_id FK
        uint genre_id FK
    }

    RENTAL {
        uint id PK
        uint user_id FK
        uint book_id FK
        datetime start_date
        datetime end_date
        string status "PENDING, ACTIVE, RETURNED"
        datetime notified_at "Nullable"
        datetime created_at
        datetime updated_at
    }

    TOPUP {
        uint id PK
        uint user_id FK
        int amount
        string status "PENDING, SUCCESS, FAILED"
        datetime created_at
        datetime updated_at
        datetime deleted_at
    }

    PAYMENT {
        uint id PK
        uint rental_id FK "Nullable"
        uint topup_id FK "Nullable"
        string xendit_external_id "Reference ID"
        string xendit_invoice_url
        string status "UNPAID, PAID, EXPIRED"
        int amount
        datetime created_at
        datetime updated_at
    }